tests/behavior/success/bit_cast_constant.bz
function main()
{
	let x = __builtin_bit_cast(f64, 0u64);
	if (x != 0.0f64) unreachable;
}
