tests/behavior/error/int_modulo_by_zero_i8.bz
function main()
{
	let a = 1i8;
	let b = 0i8;
	let _ = a % b;
}
